Add changelog, update version to 1.0.0, and create release workflow
- Introduced CHANGELOG.md to document important changes and adhere to semantic versioning.
- Updated project version in pyproject.toml to 1.0.0.
- Created GitHub Actions workflow for automated release creation upon tagging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pow2core"
-version = "0.1.0"
+version = "1.0.0"
 description = "Pow2Core is a core library for Pow2 mining calculations"
 readme = "README.md"
 authors = [
@@ -34,6 +34,7 @@ exclude = [
     "build",
     "dist",
     "tests",
+    "tmp",
 ]
 
 # Set the maximum line length
