--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,18 @@ jobs:
         id: changelog
         run: |
           tag_name=${GITHUB_REF#refs/tags/}
-          awk "/## \[$tag_name\]/,/^## \[/" CHANGELOG.md | sed '$d' > RELEASE_BODY.md
+          awk -v tag="$tag_name" '
+            /^## \[/ && $0 ~ "\\[" tag "\\]" {
+              in_section = 1
+              next
+            }
+            /^## \[/ && in_section {
+              exit
+            }
+            in_section {
+              print
+            }
+          ' CHANGELOG.md > RELEASE_BODY.md
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
