Update CHANGELOG.md for version 1.1.0, enhance README.md, and modify project files
- Updated CHANGELOG.md to document new features, improvements, and breaking changes for version 1.1.0, including the addition of the `is_listing` and `listing_stats` factors, algorithm optimizations, and configuration enhancements.
- Changed project version in pyproject.toml to 1.1.0.
- Enhanced README.md to reflect the updated project name and features.
- Refactored code to replace the old `listing` factor with the new `listing_stats` factor and added new implementations for `is_listing` and `pop_user` factors.
- Improved test coverage with new test cases for the added factors and updated existing tests to align with the new implementations.

--- a/src/pow2core/resource/config/example/s1.yaml
+++ b/src/pow2core/resource/config/example/s1.yaml
@@ -50,8 +50,8 @@ cpu:
         interval: 0.025  # 区间步长
         precision: 3  # 精度
 
-    # 挂单因子
-    - name: listing
+    # 挂单统计因子
+    - name: listing_stats
       priority: 2  # 优先级2
       children:
         # 挂单天数子因子
