Update CHANGELOG.md for version 1.1.0, add mining_limit_reached factor, and enhance tests
- Updated CHANGELOG.md to reflect the addition of the `mining_limit_reached` factor and other enhancements for version 1.1.0.
- Enhanced README.md to include the new `mining_limit_reached` factor in the documentation.
- Introduced the `MiningLimitReachedFactorByFixed` implementation to determine if the mining limit has been reached.
- Added new test cases for the `mining_limit_reached` factor to ensure proper functionality and coverage.
- Updated configuration files to include settings for the new factor.

--- a/src/pow2core/resource/config/gs/s3.yaml
+++ b/src/pow2core/resource/config/gs/s3.yaml
@@ -43,6 +43,15 @@ cpu:
         tolerance: 0.1  # alpha容差
         alpha_step: 0.1  # alpha步长
 
+    # 是否达到挖矿上限因子
+    - name: mining_limit_reached
+      priority: 0
+      config:
+        algorithm: fixed  # 固定值算法
+        weights:
+          true: 0  # 达到挖矿上限权重
+          false: 1  # 未达到挖矿上限权重
+
 # 钻石奖励配置
 diamond:
   strategy: level_group  # 策略：按等级分组
