--- a/src/pow2core/resource/config/gcw/s6.yaml
+++ b/src/pow2core/resource/config/gcw/s6.yaml
@@ -31,6 +31,8 @@ cpu:
         min_rare: 1  # 最小稀有度
         max_rare: 9432  # 最大稀有度
         alpha: 1047  # 平滑因子
+        max_weight: 10  # 最大权重
+        is_visible: true  # 是否可见
 
     # 持有天数因子
     - name: d_days
@@ -41,6 +43,8 @@ cpu:
         multiplier: 10  # 倍数调节
         created_at: "2024-11-29 02:09:52+00"  # 合集创建时间
         tz_hours: 8  # 时区偏移
+        max_weight: 1.1  # 最大权重
+        is_visible: true  # 是否可见
 
     # 交易量因子
     - name: volume
@@ -53,6 +57,8 @@ cpu:
         min_alpha: 0  # 最小alpha值
         tolerance: 0.1  # alpha容差
         alpha_step: 0.002  # alpha步长
+        max_weight: 20  # 最大权重
+        is_visible: true  # 是否可见
 
     # 变压器因子
     - name: combination
@@ -61,10 +67,16 @@ cpu:
         algorithm: value  # 数值算法
         interval: 0.025  # 区间步长
         precision: 3  # 精度
+        max_weight: 30  # 最大权重
+        is_visible: true  # 是否可见
 
     # 挂单统计因子
     - name: listing_stats
       priority: 2  # 优先级2
+      config:
+        algorithm: ''  # 固定值算法
+        max_weight: 5  # 最大权重
+        is_visible: true  # 是否可见
       children:
         # 挂单天数子因子
         - name: listing_days
@@ -76,6 +88,7 @@ cpu:
             min_weight: 1  # 最小权重
             max_weight: 5  # 最大权重
             tz_hours: 8  # 时区偏移
+            is_visible: true  # 是否可见
 
         # 挂单数量子因子
         - name: listing_count
@@ -90,6 +103,8 @@ cpu:
               - 20  # 高阈值
               - 10  # 中阈值
               - 0   # 低阈值
+            max_weight: 1  # 最大权重
+            is_visible: true  # 是否可见
 
     # 是否正在挂单因子
     - name: is_listing
@@ -99,6 +114,8 @@ cpu:
         weights:
           true: 0  # 是正在挂单权重
           false: 1  # 不是正在挂单权重
+        max_weight: 1  # 最大权重
+        is_visible: false  # 是否可见
 
     # POP用户因子
     - name: pop_user
@@ -108,6 +125,8 @@ cpu:
         weights:
           true: 1  # 是POP用户权重
           false: 0  # 不是POP用户权重
+        max_weight: 1  # 最大权重
+        is_visible: false  # 是否可见
 
 # 钻石分配策略配置
 diamond:
